name:                cabal-dep-graph
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Hirotomo Moriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Distribution
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable cabal-dep-graph
  main-is:             Main.hs
  build-depends:       base       >=4.6 && <4.8
                     , filepath   >=1.3 && <1.4
                     , process    >=1.2 && <1.3
                     , reflection >=1.5 && <1.6
                     , bytestring >=0.10 && <0.11
                     , text       >=1.2 && <1.3
                     , zlib       >=0.5 && <0.6
                     , tar        >=0.4 && <0.5
                     , Cabal      >=1.20 && <1.21
                     , directory  >= 1.2 && <1.3
                     , temporary  >=1.2  && <1.3
                     , split      >=0.2  && <0.3
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
